# ChangeLog for dev-perl/String-Format
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/String-Format/ChangeLog,v 1.21 2012/06/24 12:58:46 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -String-Format-1.16.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> String-Format-1.160.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*String-Format-1.160.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +String-Format-1.160.0.ebuild:
  Change version scheme

  11 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  String-Format-1.16.ebuild:
  Transfer Prefix keywords

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -String-Format-1.14.ebuild:
  Cleanup

  07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> String-Format-1.16.ebuild:
  stable sparc, bug 283969

  18 Sep 2009; Torsten Veller <tove@gentoo.org> String-Format-1.16.ebuild:
  Stable on amd64 (#283969)

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  String-Format-1.16.ebuild:
  x86 stable, bug 283969

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -String-Format-1.15.ebuild:
  Cleanup

  25 May 2009; Brent Baude <ranger@gentoo.org> String-Format-1.16.ebuild:
  keyworded ~arch for ppc64, bug 270706

*String-Format-1.16 (19 May 2009)

  19 May 2009; Torsten Veller <tove@gentoo.org> +String-Format-1.16.ebuild:
  Version bump

*String-Format-1.15 (28 Mar 2009)

  28 Mar 2009; Torsten Veller <tove@gentoo.org> +String-Format-1.15.ebuild:
  Version bump

  20 Feb 2008; nixnut <nixnut@gentoo.org> String-Format-1.14.ebuild:
  Added ~ppc wrt bug 207343

  27 Dec 2007; Andrej Kacian <ticho@gentoo.org> String-Format-1.14.ebuild:
  Stable on x86.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  String-Format-1.14.ebuild:
  Version bump, thanks seemant
