@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST String-Format-1.16.tar.gz 12936 SHA256 edb27dd055ad71012a439f262f9394517adb585a5c27ba72c1819bae2c23729a SHA512 27fbd414ef046d8f4634dddd7d667912e9481b943313e49f7f22ea77aeebc35c652175bf0751f13eb2bf94363d3c06c3209f16edb48acca0dc06150e86a798f2 WHIRLPOOL 465c07e3bba5d0d890d124f182e07c9d16619e1e5acba0baab0439ad0f56499fab997b7015b267aedde3552b889d72977aefac4ce971584c2d76b2aa938bf1c9
+DIST String-Format-1.17.tar.gz 12841 SHA256 5306e5908c120e9b6085fb60c0f352fdf601931398baee94cb898ca5d956ae6b SHA512 9d003483858d1681d6955b8620cbba649fe8b92c318b29c5dd684857d81320cb35fbb50e537545d1dfd1e3abc9f94acf9263b82442759e55fd686bd6e907a9f6 WHIRLPOOL 8bdd968c7014d31616e6f160303dd156d9db659c118e5aa99fd0b46bec97e51b52caee7d21fb4acc60ef72416ec0b63d400c245fe26c394e8b40a6d0a9547695
 EBUILD String-Format-1.160.0.ebuild 543 SHA256 41d905480d5c41d8cd458c4224acf4978b9c9ec1c352c08a08395593f03230f2 SHA512 6d9ce81519fd361052122d4bfc1ca37acf8751c3e29efe48ea49712ddd9869425b092a4f255f78799d25b4fc70caf67b25117bd50ae5bc6a6981e5923d0ec9e5 WHIRLPOOL e3b9f411b709953779d21db27ebb7d9de2181693e4160542162fed3daf20c6bc576a58aace9e47ac44ef9593a18e0f126c016f51d60d2a9ff4c41cfcfb850dac
-MISC ChangeLog 2525 SHA256 942889efa3bd72c79c5d213d05286c544df87e882700a46d2dbde816f2464270 SHA512 8bb2bbc28912a5b1f83784b0089171828c4df1d23b6f025c044a907b69d1d3afb5341f2959dc9d08707f8ae97aa527a457933b607712c27d8364685d3618682a WHIRLPOOL ccd87de00f0c48eecedecebec3d5d8eb2697e12dee54ca5abb8dc6fe02fba408b8f9a1b835fee7735556542f09afd162b53a40141dab8148e147e39726ee8b3f
+EBUILD String-Format-1.170.0.ebuild 546 SHA256 ad66aace908d19553be2ee121445ee5cad0a4352021adaf9db368f0350104262 SHA512 69503701c0d7cf6ccd80ddc399c71f0ce45d22444811a0a949139f1d075ee56a4ffeb1f29ae35ef745faee7061d20eac41008af2571ec9ee82ebe0e11f7390d7 WHIRLPOOL e3ee984704eb484927b79beb7c54801ad9ccb1567f5e77142249f7e79e84f44c568e1adaeb27ce7d633a59eeaed55510304a98c277f981ec4115c90dc2ebfd75
+MISC ChangeLog 2658 SHA256 5c9ae4a7009265e5bfb629b4ced893ecc0331c6dc44743009c3cf091c2a8a502 SHA512 d6efc7c30e9aff2bd307ea8e9c4abe9d88903251984f1b174a7a6b2b062117761ffaa2910680bbcd3391276c7cf4b52b8adb2d394c50a411aea3aee55d7df9f2 WHIRLPOOL ad6e750f7870c63b6a297635851b0249f1685414364ff7d7ac4a63f3423cac0b7102041c8a787c1412533693f80510c511c13cd9ca74b09e1a10b40d05b67a89
 MISC metadata.xml 300 SHA256 3478b91e7bb90409b2984e71525f9b690f5097b469e9137472fab2f90cd3e425 SHA512 87108f50f19ceecbb23932fa8d69ac699512d41b70ea617d4ef65af1875cc46d85a9fee5a24cd0a5289011dd80a9b6b3b28cac293420da7523a463189a5ff333 WHIRLPOOL 0abc6f0dbad2453f765625ab7c3f980438424a95cb91352853daccb120e3485e45ce4cb1b8f658903a7496660e0325795659bcffd2da0bfbe89632857e381727
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDDG5sACgkQV3J2n04EauyzIQCdECetfsvpkceQE31d5hgaudAe
+zfAAn2G27PXoYNInTW+eV1VRdNNW2Bz1
+=ikKY
+-----END PGP SIGNATURE-----
